[gd_scene load_steps=23 format=3 uid="uid://8hmtcpreq805"]

[ext_resource type="Script" path="res://GameController.gd" id="1_ejlc7"]
[ext_resource type="Texture2D" uid="uid://bl565afw3syd3" path="res://assets/tileset.png" id="2_uf2fj"]
[ext_resource type="PackedScene" uid="uid://wqctbo47k485" path="res://player.tscn" id="3_orx85"]
[ext_resource type="PackedScene" uid="uid://dwf5wbndk8lay" path="res://umbrella.tscn" id="4_4kl7l"]
[ext_resource type="PackedScene" uid="uid://djkwfif30t7ah" path="res://key.tscn" id="6_hkyk3"]
[ext_resource type="Texture2D" uid="uid://c217g1mwl4mfj" path="res://assets/door_upper.png" id="7_lt5wh"]
[ext_resource type="Script" path="res://Door.gd" id="7_xebjc"]
[ext_resource type="Texture2D" uid="uid://clds1o3svxavb" path="res://assets/door_lower.png" id="8_jp1tj"]
[ext_resource type="Texture2D" uid="uid://cswf46xc3cme2" path="res://assets/lock.png" id="9_ayb3u"]
[ext_resource type="Script" path="res://Button.gd" id="11_qoj2o"]
[ext_resource type="Texture2D" uid="uid://c1sjblvbqmeg8" path="res://assets/button_pink.png" id="12_wvi4m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ixpn4"]
texture = ExtResource("2_uf2fj")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_1/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_1/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_1/angular_velocity = 0.0
4:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_1/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_1/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_1/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_1/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_1/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_1/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_1/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_1/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_1/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_1/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_1/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_1/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_joimc"]
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 3
sources/0 = SubResource("TileSetAtlasSource_ixpn4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7sy6"]
size = Vector2(306, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvo2s"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vv1rv"]
size = Vector2(38, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_7t8kn"]
radius = 7.07107

[sub_resource type="AtlasTexture" id="AtlasTexture_kr1av"]
atlas = ExtResource("12_wvi4m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya5vk"]
atlas = ExtResource("12_wvi4m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgnqy"]
atlas = ExtResource("12_wvi4m")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcsa5"]
atlas = ExtResource("12_wvi4m")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_52hnd"]
animations = [{
"frames": [{
"duration": 1.8,
"texture": SubResource("AtlasTexture_kr1av")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_ya5vk")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_rgnqy")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_dcsa5")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Root" type="Node2D"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="Level" type="Node2D" parent="." node_paths=PackedStringArray("player", "umbrella", "camera")]
script = ExtResource("1_ejlc7")
player = NodePath("Player")
umbrella = NodePath("Umbrella")
camera = NodePath("Camera2D")

[node name="TileMap" type="TileMap" parent="Level"]
position = Vector2(4, 0)
tile_set = SubResource("TileSet_joimc")
format = 2
layer_0/tile_data = PackedInt32Array(393232, 65536, 0, 393231, 65536, 0, 393230, 65536, 0, 393229, 65536, 0, 393228, 65536, 0, 393227, 0, 1, 327691, 196608, 2, 262155, 196608, 2, 196619, 196608, 2, 131083, 196608, 2, 65547, 196608, 2, 11, 196608, 2, -65525, 196608, 2, 131091, 0, 1, 131092, 65536, 1, 196627, 0, 3, 196628, 65536, 3, 262169, 0, 1, 327705, 0, 2, 393236, 131072, 1, 393235, 65536, 0, 393234, 65536, 0, 393233, 65536, 0, 458772, 0, 3, 458773, 131072, 1, 524309, 0, 3, 524310, 131072, 1, 393241, 0, 3, 393242, 65536, 3, 393243, 65536, 3, 393244, 65536, 3, 393245, 65536, 3, 393246, 65536, 2, 458782, 0, 2, 524318, 0, 2, 589854, 65536, 3, 589853, 65536, 0, 589852, 65536, 0, 589851, 65536, 0, 589850, 65536, 0, 589849, 65536, 0, 589848, 65536, 0, 589847, 65536, 0, 589846, 0, 3, 262170, 65536, 1, 262171, 65536, 1, 262172, 65536, 1, 262173, 65536, 1, 262174, 65536, 1, 262175, 65536, 1, 131093, 131072, 1, 196629, 131072, 3, 65565, 131072, 3, 65564, 65536, 2, 65563, 0, 3, 27, 65536, 2, 26, 0, 3, 28, 65536, 2, 29, 65536, 2, 30, 131072, 3, -65511, 0, 0, -65510, 65536, 1, -65509, 65536, 1, -65508, 65536, 1, -65507, 65536, 1, -65506, 65536, 1, -65505, 65536, 0, -65504, 65536, 0, -65503, 65536, 3, -131039, 0, 2, -196575, 0, 2, -262111, 0, 2, -327647, 0, 2, 262177, 65536, 1, 262176, 65536, 1, 327713, 131072, 2, 393249, 131072, 3, 393248, 65536, 3, 393247, 65536, 2, 458783, 131072, 2, 524319, 131072, 2, 589855, 131072, 2, 327712, 65536, 2, 327711, 65536, 2, 327710, 65536, 2, 327709, 65536, 2, 327708, 65536, 2, 327707, 65536, 2, 327706, 65536, 2, 262178, 131072, 0, 262182, 196608, 1, 327718, 0, 2, 393254, 0, 3, 589865, 0, 0, 393255, 131072, 3, 327719, 65536, 1, 327720, 65536, 0, 327721, 65536, 0, 327722, 65536, 0, 327723, 131072, 2, 393259, 196608, 2, 458795, 196608, 2, 524331, 0, 2, 589867, 131072, 2, 589866, 65536, 0, 983083, 196608, 0, 983080, 196608, 0, 983077, 196608, 0, 983071, 196608, 2, 917535, 196608, 2, 851999, 196608, 2, 786463, 196608, 2, 720927, 196608, 2, 655391, 196608, 2, 1245228, 65536, 1, 1245227, 65536, 1, 1245226, 65536, 1, 1245225, 65536, 1, 1245224, 65536, 1, 1245223, 65536, 1, 1245222, 65536, 1, 1245221, 65536, 1, 1245220, 65536, 1, 1245219, 65536, 1, 1245218, 65536, 1, 1245217, 65536, 1, 1245216, 65536, 1, 1245215, 0, 3, 1179679, 196608, 2, 1114143, 196608, 2, 1048607, 196608, 2, 1245229, 65536, 1, 1245230, 65536, 1, 1245231, 65536, 1, 983089, 65536, 0, 983090, 65536, 0, 983091, 131072, 2, 1179680, 262144, 0, 1179681, 262144, 0, 1179682, 262144, 0, 1179683, 262144, 0, 1179684, 262144, 0, 1179685, 262144, 0, 1179686, 262144, 0, 1179687, 262144, 0, 1179688, 262144, 0, 1179689, 262144, 0, 1179690, 262144, 0, 1179691, 262144, 0, 1179692, 262144, 0, 1179693, 262144, 0, 1179694, 262144, 0, 43, 0, 2, -131023, 0, 0, -262101, 0, 1, -458703, 65536, 3, -458704, 65536, 3, -458705, 65536, 3, -458706, 65536, 3, -458707, 65536, 3, -458708, 65536, 3, -458709, 65536, 3, -458710, 65536, 3, -458711, 65536, 3, -458712, 65536, 3, -458713, 65536, 3, -458714, 65536, 3, -458715, 65536, 3, -458716, 65536, 3, -458717, 65536, 3, -458718, 65536, 2, -458719, 0, 2, -393183, 0, 2, 393265, 0, 0, 262187, 0, 2, 196651, 196608, 2, 131115, 196608, 2, 65579, 196608, 2, 44, 65536, 0, 45, 131072, 0, -65493, 131072, 2, -131029, 196608, 2, -196565, 196608, 2, -262099, 131072, 0, -262100, 65536, 0, 393267, 131072, 2, 327731, 196608, 2, 262195, 196608, 2, 196659, 196608, 2, 131123, 131072, 2, 65587, 196608, 2, 51, 196608, 2, -65485, 196608, 2, -131021, 131072, 2, -196557, 196608, 2, -262093, 196608, 2, -327629, 196608, 2, -393165, 196608, 2, -458701, 131072, 2, -458702, 65536, 3, -131022, 65536, 0, 393266, 65536, 0, 262188, 65536, 0, 262189, 131072, 0, 524332, 65536, 0, 524333, 131072, 0, 131121, 0, 0, 131122, 65536, 0, 655409, 0, 0, 655410, 65536, 0, 655411, 131072, 2, 589875, 196608, 2, 524339, 196608, 2, 458803, 196608, 2, 786477, 131072, 0, 786476, 65536, 0, 786475, 0, 3, 720939, 196608, 2, 655403, 196608, 2, 917555, 196608, 2, 852019, 196608, 2, 786483, 196608, 2, 720947, 196608, 2, 1048627, 196608, 2, 1114163, 196608, 2, 1179699, 196608, 2, 1245235, 131072, 3, 1245234, 65536, 1, 1245233, 65536, 1, 1245232, 65536, 1, 1179695, 262144, 0, 1179696, 262144, 0, 1179697, 262144, 0, 1179698, 262144, 0, 983088, 0, 0, -65494, 65536, 0, -65495, 65536, 0, -65496, 0, 0, -65502, 131072, 3, -131038, 131072, 2, -196574, 131072, 2, -262110, 131072, 2, -327646, 131072, 2, -393182, 131072, 2, -131061, 196608, 2, -196597, 196608, 2, -262133, 196608, 2, -327669, 196608, 2, -524255, 0, 2, -589791, 0, 2, -524253, 65536, 2, -524254, 65536, 2, -524252, 65536, 2, -524251, 65536, 2, -524250, 65536, 2, -524249, 65536, 2, -524248, 65536, 2, -524247, 65536, 2, -524246, 65536, 2, -524245, 65536, 2, -524244, 65536, 2, -524243, 65536, 2, -524242, 65536, 2, -524241, 65536, 2, -524240, 65536, 2, -524239, 65536, 2, -524238, 65536, 2, -524237, 131072, 2, -589773, 131072, 2, -589774, 65536, 2, -589775, 65536, 2, -589776, 65536, 2, -589777, 65536, 2, -589778, 65536, 2, -589779, 65536, 2, -589780, 65536, 2, -589781, 65536, 2, -589782, 65536, 2, -589783, 65536, 2, -589784, 65536, 2, -589785, 65536, 2, -589786, 65536, 2, -589787, 65536, 2, -589788, 65536, 2, -589789, 65536, 2, -589790, 65536, 2, -655327, 0, 1, -655326, 65536, 1, -655325, 65536, 1, -655324, 65536, 1, -655323, 65536, 1, -655322, 65536, 1, -655321, 65536, 1, -655320, 65536, 1, -655319, 65536, 1, -655318, 65536, 1, -655317, 65536, 1, -655316, 65536, 1, -655315, 65536, 1, -655314, 65536, 1, -655313, 65536, 1, -655312, 65536, 1, -655311, 65536, 1, -655310, 65536, 1, -655309, 131072, 1)

[node name="Spikes" type="Area2D" parent="Level/TileMap"]
position = Vector2(520, 304)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/TileMap/Spikes"]
position = Vector2(143, 0)
shape = SubResource("RectangleShape2D_m7sy6")

[node name="Player" parent="Level" node_paths=PackedStringArray("umbrella") instance=ExtResource("3_orx85")]
position = Vector2(220, 80)
umbrella = NodePath("../Umbrella")

[node name="Umbrella" parent="Level" node_paths=PackedStringArray("player") instance=ExtResource("4_4kl7l")]
position = Vector2(268, 56)
player = NodePath("../Player")

[node name="Camera2D" type="Camera2D" parent="Level"]
zoom = Vector2(3, 3)
position_smoothing_speed = 2.455

[node name="Key" parent="Level" instance=ExtResource("6_hkyk3")]
position = Vector2(457, 128)

[node name="Door" type="StaticBody2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(460, 56)
script = ExtResource("7_xebjc")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Door"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_pvo2s")

[node name="DoorUpper" type="Sprite2D" parent="Level/Door"]
position = Vector2(0, -16)
texture = ExtResource("7_lt5wh")

[node name="DoorLower" type="Sprite2D" parent="Level/Door"]
texture = ExtResource("8_jp1tj")

[node name="Lock" type="Sprite2D" parent="Level/Door"]
position = Vector2(0, -9)
texture = ExtResource("9_ayb3u")

[node name="Unlocker" type="Area2D" parent="Level/Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Door/Unlocker"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_vv1rv")

[node name="Button" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(316, 82)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.363752

[node name="Button2" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(326, 19)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button2"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button2"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button3" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(420, -32)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button3"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button3"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button4" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(460, -32)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button4"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button4"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button6" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(668, 112)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button6"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button6"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button7" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(604, 224)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button7"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button7"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button8" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(652, 224)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button8"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button8"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button9" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(700, 224)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button9"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button9"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button10" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(660, -32)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button10"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button10"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[node name="Button5" type="Area2D" parent="Level" node_paths=PackedStringArray("game_controller", "player")]
position = Vector2(500, -32)
script = ExtResource("11_qoj2o")
game_controller = NodePath("..")
player = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Button5"]
shape = SubResource("CircleShape2D_7t8kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Level/Button5"]
sprite_frames = SubResource("SpriteFrames_52hnd")
frame_progress = 0.85466

[connection signal="body_entered" from="Level/TileMap/Spikes" to="Level" method="_on_spikes_body_entered"]
[connection signal="body_entered" from="Level/Key" to="Level" method="_on_key_body_entered"]
[connection signal="body_entered" from="Level/Door/Unlocker" to="Level/Door" method="_on_unlocker_body_entered"]
[connection signal="body_entered" from="Level/Button" to="Level/Button" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button2" to="Level/Button2" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button3" to="Level/Button3" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button4" to="Level/Button4" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button6" to="Level/Button6" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button7" to="Level/Button7" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button8" to="Level/Button8" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button9" to="Level/Button9" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button10" to="Level/Button10" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Button5" to="Level/Button5" method="_on_body_entered"]
